@@ -3,7 +3,7 @@ author           = Síle Ekaterin Aman
 author           = Graham Ollis <plicease@cpan.org>
 copyright_holder = Síle Ekaterin Aman
 copyright_year   = 2012-2021
-version          = 0.11
+version          = 1.00_01
 license          = Perl_5
 
 [@Author::Plicease]
