@@ -12,9 +12,9 @@ use if $^O eq 'MSWin32', 'Win32';
 
 =head1 SYNOPSIS
 
- use File::XDG;
+ use File::XDG 1.00;
  
- my $xdg = File::XDG->new(name => 'foo');
+ my $xdg = File::XDG->new( name => 'foo', api => 1 );
  
  # user config
  my $path = $xdg->config_home;
@@ -65,13 +65,11 @@ The API version to use.
 
 =item api = 0
 
-The default and original API version.
+The default and original API version.  For backward compatibility only.
 
 =item api = 1
 
-Currently experimental API version.  This will issue a warning when invoked
-until version C<1.00> is released.  At this point the version 1 API will
-be stable.
+Recommended stable API version for all new code.
 
 =back
 
@@ -171,7 +169,6 @@ sub new {
 
     my $api = delete $args{api};
     $api = 0 unless defined $api;
-    Carp::carp("Note: experimental use of api = 1") if $api == 1;
     Carp::croak("Unsupported api = $api") unless $api == 0 || $api == 1;
 
     my $path_class = delete $args{path_class};
@@ -493,15 +490,7 @@ sub exe_dir
 
 =head2 lookup_data_file
 
- # api = 0
- my $path = $xdg->lookup_data_file($subdir, $filename);
-
-Looks up the data file by searching for C<./$subdir/$filename> relative to all base
-directories indicated by C<$XDG_DATA_HOME> and C<$XDG_DATA_DIRS>. If an environment
-variable is either not set or empty, its default value as defined by the
-specification is used instead. Returns a path class object.
-
- # api = 1
+ my $xdg = File::XDG->new( name => $name, api => 1 ); # recommended
  my $path = $xdg->lookup_data_File($filename);
 
 Looks up the data file by searching for C<./$name/$filename> (where C<$name> is
@@ -509,6 +498,14 @@ provided by the constructor) relative to all base directories indicated by
 C<$XDG_DATA_HOME> and C<$XDG_DATA_DIRS>. If an environment variable is either
 not set or empty, its default value as defined by the specification is used
 instead. Returns a path class object.
+
+ my $xdg = File::XDG->new( name => $name ); # back compat only
+ my $path = $xdg->lookup_data_file($subdir, $filename);
+
+Looks up the data file by searching for C<./$subdir/$filename> relative to all base
+directories indicated by C<$XDG_DATA_HOME> and C<$XDG_DATA_DIRS>. If an environment
+variable is either not set or empty, its default value as defined by the
+specification is used instead. Returns a path class object.
 
 =cut
 
@@ -520,15 +517,7 @@ sub lookup_data_file {
 
 =head2 lookup_config_file
 
- # api = 0
- my $path = $xdg->lookup_config_file($subdir, $filename);
-
-Looks up the configuration file by searching for C<./$subdir/$filename> relative to
-all base directories indicated by C<$XDG_CONFIG_HOME> and C<$XDG_CONFIG_DIRS>. If an
-environment variable is either not set or empty, its default value as defined
-by the specification is used instead. Returns a path class object.
-
- # api = 1
+ my $xdg = File::XDG->new( name => $name, api => 1 ); # recommended
  my $path = $xdg->lookup_config_file($filename);
 
 Looks up the configuration file by searching for C<./$name/$filename> (where C<$name> is
@@ -536,6 +525,14 @@ provided by the constructor) relative to all base directories indicated by
 C<$XDG_CONFIG_HOME> and C<$XDG_CONFIG_DIRS>. If an environment variable is
 either not set or empty, its default value as defined by the specification
 is used instead. Returns a path class object.
+
+ my $xdg = File::XDG->new( name => $name ); # back compat only
+ my $path = $xdg->lookup_config_file($subdir, $filename);
+
+Looks up the configuration file by searching for C<./$subdir/$filename> relative to
+all base directories indicated by C<$XDG_CONFIG_HOME> and C<$XDG_CONFIG_DIRS>. If an
+environment variable is either not set or empty, its default value as defined
+by the specification is used instead. Returns a path class object.
 
 =cut
 
